changed the id of the mod to remove the _ from it

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,5 +10,5 @@ org.gradle.jvmargs=-Xmx1G
 
 # Mod Properties
 	mod_version = 1.0.0
-	maven_group = com.the_changer.mc_colosseum
+	maven_group = com.the_changer.mccolosseum
 	archives_base_name = Minecraft_Colosseum
