--- a/src/main/resources/data/mccolosseum/tags/worldgen/biome/has_structure/colosseum_biomes.json
+++ b/src/main/resources/data/mccolosseum/tags/worldgen/biome/has_structure/colosseum_biomes.json
@@ -36,6 +36,7 @@
     "minecraft:stony_peaks",
     "minecraft:snowy_beach",
     "minecraft:stony_shore",
-    "minecraft:mushroom_fields"
+    "minecraft:mushroom_fields",
+    "minecraft:mangrove_swamp"
   ]
 }
